condition if no demo link

--- a/src/app/assets/data/projects.json
+++ b/src/app/assets/data/projects.json
@@ -10,8 +10,8 @@
             "month": "October"
         },
         "links": {
-            "github": "https://s3-us-west-2.amazonaws.com/s.cdpn.io/225363/fashion.jpg",
-            "demo": "https://s3-us-west-2.amazonaws.com/s.cdpn.io/225363/fashion.jpg"
+            "github": "https://github.com/remysiri/car-auction-app",
+            "demo": null
         },
         "media": [
             {
