--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rehooks/window-size": "^1.0.2",
     "framer-motion": "^1.6.15",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
@@ -11,6 +12,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-swipe": "^6.0.4",
+    "react-use-dimensions": "^1.2.1",
     "styled-components": "^4.4.0",
     "swipe-js-iso": "^2.1.5"
   },
