--- a/src/app/assets/data/projects.json
+++ b/src/app/assets/data/projects.json
@@ -120,7 +120,7 @@
         "slug": "unionlao",
         "type": "Website",
         "title": "Unionlao",
-        "description": "Website for a lao association based in Belgium.",
+        "description": "Still under construction",
         "roles": ["Full Stack Developer", "Designer"],
         "thumbnail": "project-04/1.png",
         "team": null,
